--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
