--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,7 +32,7 @@
     },
     {
       "src": "icons/icon-72x72.png",
-      "sizes": "96x96",
+      "sizes": "72x72",
       "type": "image/png"
     }
   ],
@@ -40,7 +40,7 @@
   "short_name": "Budget",
   "orientation": "portrait",
   "display": "standalone",
-  "start_url": "../index.html",
+  "start_url": "./index.html",
   "description": "An app that allows you to add budget fees.",
   "background_color": "#01579b",
   "theme_color": "#ffffff"
